# homelab-dns

./: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.circleci/: config.yml
manifests/: homelab-dns.yaml  kustomization.yaml  namespace.yaml
src/: error.rs  main.rs
