[package]
name = "homelab-dns"
version = "0.1.0"
edition = "2021"
authors = ["Ross Delinger <rossdylan@fastmail.com>"]
readme = "README.md"
description = "External-ish DNS for homelab kubernetes clusters"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
futures = "0.3"
humantime = "2"
json-patch = "0.2"
k8s-openapi = { version = "0.14", features = ["v1_22"] }
kube = { version = "0.70", features = ["runtime", "derive"]}
thiserror = "1"
tokio = {version = "1.17", features = ["full"]}
tracing = {version = "0.1"}
tracing-subscriber = "0.3"
trust-dns-client = "0.21.1"
trust-dns-proto = "0.21.1"
trust-dns-server = { version = "0.21.1", default-features = false }