[package]
name = "homelab-dns"
version = "0.2.0"
edition = "2021"
authors = ["Ross Delinger <rossdylan@fastmail.com>"]
readme = "README.md"
description = "External-ish DNS for homelab kubernetes clusters"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "3", features = ["derive"] }
futures = "0.3"
humantime = "2"
json-patch = "0.2"
k8s-openapi = { version = "0.15", features = ["v1_22"] }
kube = { version = "0.74", features = ["runtime", "derive"]}
thiserror = "1"
tokio = {version = "1.18", features = ["full"]}
tracing = {version = "0.1"}
tracing-subscriber = "0.3"
trust-dns-client = "0.22.0"
trust-dns-proto = "0.22.0"
trust-dns-server = { version = "0.22.0", default-features = false }

[profile.release]
debug = 1
incremental = true
lto = "off"
