[package]
name = "homelab-dns"
version = "0.2.0"
edition = "2021"
authors = ["Ross Delinger <rossdylan@fastmail.com>"]
readme = "README.md"
description = "External-ish DNS for homelab kubernetes clusters"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
humantime = "2"
json-patch = "3"
k8s-openapi = { version = "0.23", features = ["v1_31"] }
kube = { version = "0.97", features = ["runtime", "derive"] }
thiserror = "2"
tokio = { version = "1.41", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
hickory-client = "0.24.0"
hickory-proto = "0.24.0"
hickory-server = { version = "0.24.0", default-features = false }

[profile.release]
debug = 1
incremental = true
lto = "off"
